k8s/connectin/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: connectin
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    kubernetes.io/ingress.class: alb
spec: 
  rules:
  - http:
      paths:
      - path: /auth/*
        pathType: ImplementationSpecific
        backend:
          service:
            name: auth 
            port:
              number: 3001
